# SmartPitch

./: .gitignore  AI_CONTEXT.md  CLAUDE.md  README.md  TODO.md  check_transition_dataset.py  data_loader.py  fetch_wandb_run.py  main.py  mdp_solver.py  prompts.md  pyproject.toml  report_chk.txt
data/: bip_probabilities_2021.json  bip_probabilities_2022.json  bip_probabilities_2023.json  bip_probabilities_2024.json  bip_probabilities_2025.json  re24_2019.json  re24_2021.json  re24_2022.json  re24_2023.json  re24_2024.json  re24_2025.json
docs/: 5year_model_comparison.md  AUTO_TASK_COMPLETE.md  CACHE_INVALIDATION.md  MODEL_USAGE.md  baseline_by_cluster.md  baseline_cease.md  baseline_comparison.md  baseline_gallen.md  demo_api_spec.md  evaluation_framework.md  expected_qa.md  experiment_comparison.md  improvement_roadmap.md  mdp_vs_env_reward_analysis.md  personal_dqn_report.md  project_walkthrough.md  re24_2019_vs_2024_comparison.md  re24_decision.md  re24_seasonal_analysis.md  system_diagnosis.md  task_21_25_evaluation.md  work_log_20260329_30.md  work_report_20260427.md  work_report_20260428.md
scripts/: analyze_mdp_vs_env.py  compute_bip_probabilities.py  compute_re24_per_season.py  diagnose_knuckleball_bias.py  diagnose_knuckleball_bias_v2.py  evaluate_personal_dqn.py  generate_baseline_presentation.py  generate_extra_presentation.py  generate_physical_lookup.py  generate_pitch_location_heatmaps.py  generate_presentation_charts.py  main_cease.py  main_gallen.py  single_pitcher_zone_breakdown.py  train_5year_models.py  train_dqn_all_clusters.py
src/: bip_loader.py  (+19 more)
(+4 files in other folders)
