[project]
name = "SmartPitch"
version = "0.1.0"
description = "End-to-End MLB Pitch Sequence Optimization Pipeline using PyTorch MLP and Markov Decision Process (MDP) with DQN Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nbstripout>=0.9.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pybaseball>=2.2.7",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "umap-learn>=0.5.11",
    "wandb>=0.25.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.3.0",
    "plotly>=6.6.0",
]
